# irl_audio

./: README.md
audio_tools/: CMakeLists.txt
audio_tools/src/: stream_extract.cpp  stream_player.cpp
irl_audio/: package.xml
manyears_ros/: CMakeLists.txt
manyears_ros/data/: kinect.mes  params.mes  xtion_stereo.mes
manyears_ros/include/manyears_ros/: manyears_node.hpp
manyears_ros/launch/: demo_8sounds.launch  many_ears_8sounds.launch  manyears_node.launch  manyears_node_kinect.launch
manyears_ros/src/: manyears_node.cpp  manyears_ros.cpp  sound_position_exploitation.cpp
rt_audio_ros/: CMakeLists.txt
rt_audio_ros/src/: rt_audio.cpp  stream_player.cpp
